--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -80,7 +80,8 @@ p a:hover {
 
 
 .container-full.subhead {
-  margin-top: 1em;
+  margin-top: 2em;
+  margin-bottom: 2em;
   width: 100%;
   color: white;
   padding: 1em;
