--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -54,7 +54,7 @@
 
   <div class="row">
     <div class="col-xs-12 col-md-12">
-      <p class="btn-more" href="#">MORE</p>
+      <p class="btn-more" href="#">MORE <i class="fa fa-chevron-circle-down"></i></p>
     </div>
   </div>
 </div>
@@ -89,7 +89,7 @@
 
       <p><a href="http://www.detroitlions.com/ford-field/">Ford Field</a></p>
 
-      <a class="btn ticket-btn" href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets</a>
+      <a class="btn ticket-btn" href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a>
 
     </div>
 
@@ -98,15 +98,15 @@
       <h3>Upcoming Stops</h3>
       <hr>
       <p>March 26, 2016 / / Dubai, United Arab Emerates</P>
-        <p class="venue">Barclaycard Arena | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets</a></p>
+        <p class="venue">Barclaycard Arena | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a></p>
       <p>March 30, 2016 / / Birmingham, United Kingdom</P>
-        <p class="venue">Barclaycard Arena | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets</a></p>
+        <p class="venue">Barclaycard Arena | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a></p>
       <p>March 31, 2016 / / London, United Kingdom</P>
-        <p class="venue">The O2 | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets</a></p>
+        <p class="venue">The O2 | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a></p>
       <p>April 2, 2016 / / Dublin, Ireland</P>
-        <p class="venue">3Arena | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets</a></p>
+        <p class="venue">3Arena | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a></p>
       <p>April 4, 2016 / / Glasgow, United Kingdom</P>
-        <p class="venue">The SSE Hydro | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets</a></p>
+        <p class="venue">The SSE Hydro | <a href="http://www.ticketmaster.com/rihanna-anti-world-tour-2016-miami-florida-03-15-2016/event/0D004F74E49DBB97?ac_link=tmplus_merch_sitespotlight_LSC_GTVopp&pageType=home&spotlight=1%7C1317303&spotlight_ren_od=1&tm_link=tm_homeA_4_f1">Find Tickets <i class="fa fa-ticket"></i></a></p>
 
     </div>
   </div>
@@ -120,7 +120,7 @@
 
 <div class="container-fluid merch">
   <div class="row">
-    <div class="col-xs-6 col-md-12">
+    <div class="col-xs-12 col-md-12">
       <p>Filter by: <a href="#">Albums</a> | <a href="#">Wearables</a> | <a href="#">Memorabilia</a></p>
     </div>
 
@@ -142,7 +142,7 @@
 
 <div class="row">
   <div class="col-xs-12 col-md-12">
-    <p class="btn-more" href="#">MORE</p>
+    <p class="btn-more" href="#">MORE <i class="fa fa-chevron-circle-down"></i></p>
   </div>
 </div>
 
@@ -193,6 +193,13 @@
 
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-md-12">
+        <p class="btn-more" href="#">MORE <i class="fa fa-chevron-circle-down"></i></p>
+      </div>
+    </div>
+
   </div>
 </div>
 
@@ -207,56 +214,20 @@
   <div class="row">
     <div class="col-xs-12 col-md-12">
 
+      <% 12.times do %>
+
       <div class="col-xs-3 col-md-2" style="padding-top:1em">
         <img class="img-responsive" src="http://placehold.it/1000x1000">
       </div>
-      <div class="col-xs-3 col-md-2" style="padding-top:1em">
-        <img class="img-responsive" src="http://placehold.it/1000x1000">
-      </div>
-      <div class="col-xs-3 col-md-2" style="padding-top:1em">
-        <img class="img-responsive" src="http://placehold.it/1000x1000">
-      </div>
-      <div class="col-xs-3 col-md-2" style="padding-top:1em">
-        <img class="img-responsive" src="http://placehold.it/1000x1000">
-      </div>
-      <div class="col-xs-3 col-md-2" style="padding-top:1em">
-        <img class="img-responsive" src="http://placehold.it/1000x1000">
-      </div>
-      <div class="col-xs-3 col-md-2" style="padding-top:1em">
-        <img class="img-responsive" src="http://placehold.it/1000x1000">
-      </div>
+
+      <% end %>
 
     </div>
   </div>
 
   <div class="row">
     <div class="col-xs-12 col-md-12">
-
-      <div class="col-xs-3 col-md-2" style="padding-top:1em">
-        <img class="img-responsive" src="http://placehold.it/1000x1000">
-      </div>
-      <div class="col-xs-3 col-md-2" style="padding-top:1em">
-        <img class="img-responsive" src="http://placehold.it/1000x1000">
-      </div>
-      <div class="col-xs-3 col-md-2" style="padding-top:1em">
-        <img class="img-responsive" src="http://placehold.it/1000x1000">
-      </div>
-      <div class="col-xs-3 col-md-2" style="padding-top:1em">
-        <img class="img-responsive" src="http://placehold.it/1000x1000">
-      </div>
-      <div class="col-xs-3 col-md-2" style="padding-top:1em">
-        <img class="img-responsive" src="http://placehold.it/1000x1000">
-      </div>
-      <div class="col-xs-3 col-md-2" style="padding-top:1em">
-        <img class="img-responsive" src="http://placehold.it/1000x1000">
-      </div>
-
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-xs-12 col-md-12">
-      <p class="btn-more" href="#">MORE</p>
+      <p class="btn-more" href="#">MORE <i class="fa fa-chevron-circle-down"></i></p>
     </div>
   </div>
 
